# neopilot

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  README.md  install.ps1  install.sh  pyproject.toml  ruff.toml  version.json
docs/: ARCHITECTURE.md  RELEASING.md  SETUP.md  USAGE.md
src/neopilot/: __init__.py  app.py  server.py
src/neopilot/api/: __init__.py  auth.py  client.py  endpoints.py  errors.py
src/neopilot/context/: global_context.py  manager.py  user_context.py
src/neopilot/infra/: debug.py  env.py  formatting.py  i18n.py  logging.py  version.py
src/neopilot/models/: __init__.py  context.py  dashboards.py  dimensions.py  explorer.py  instance.py  metrics.py
src/neopilot/storage/: local_store.py
src/neopilot/tools/: __init__.py  components.py  context_tools.py  dashboards.py  explorer.py  instances.py  metrics_dimensions.py
tests/: conftest.py  test_auth.py  test_client.py  test_context.py  test_endpoints.py  test_explorer.py  test_formatting.py  test_integration.py  test_models.py  test_server.py  test_storage.py  test_tools.py
tests/fixtures/: all_components_response.json  component_response.json  dashboards_response.json  dimensions_response.json  explorer_response.json  login_response.json  metrics_response.json
